# bt-service

./: .env.example  .gitignore  README.md  pyproject.toml
src/bt_service/: __main__.py  jira_client.py  logging_config.py  main.py  models.py  paths.py  process_runner.py  settings.py
tests/: test_paths.py  test_settings.py
