[project]
name = "bt-service"
version = "0.1.0"
description = "FastAPI template for executable orchestration and Jira updates"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
bt-service = "bt_service.main:run"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

